--- a/.github/workflows/everyday.yml
+++ b/.github/workflows/everyday.yml
@@ -20,4 +20,4 @@ jobs:
       - run: node index.js
         env:
           DUOLINGO_JWT: ${{ secrets.DUOLINGO_JWT }}
-          LESSONS: ${{ inputs.lessons }}
+          LESSONS: 100
